# meson_stm32

./: README.md  meson.build
cross/: stm32f7disco.txt
cube_dep/: cubeparse.rb  meson.build
scripts/: flash.sh
